objects/Program_Rule__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Criteria__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Criteria</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Eligibility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eligibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_To_Compare_1__c</fullName>
        <description>Used to store api name of first field to compare</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Used to store api name of first field to compare</inlineHelpText>
        <label>Field To Compare 1</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_To_Compare_2__c</fullName>
        <description>Used to store api name of second field to compare</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Used to store api name of second field to compare</inlineHelpText>
        <label>Field To Compare 2</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Type__c</fullName>
        <description>Used to decide operator which can be used to compare fields</description>
        <inlineHelpText>Used to decide operator which can be used to compare fields</inlineHelpText>
        <label>Field Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ADDRESS</fullName>
                </value>
                <value>
                    <fullName>BOOLEAN</fullName>
                </value>
                <value>
                    <fullName>CURRENCY</fullName>
                </value>
                <value>
                    <fullName>DATE</fullName>
                </value>
                <value>
                    <fullName>DATETIME</fullName>
                </value>
                <value>
                    <fullName>DOUBLE</fullName>
                </value>
                <value>
                    <fullName>EMAIL</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>INTEGER</fullName>
                </value>
                <value>
                    <fullName>LOCATION</fullName>
                </value>
                <value>
                    <fullName>MULTIPICKLIST</fullName>
                </value>
                <value>
                    <fullName>NUMBER</fullName>
                </value>
                <value>
                    <fullName>PERCENT</fullName>
                </value>
                <value>
                    <fullName>PHONE</fullName>
                </value>
                <value>
                    <fullName>PICKLIST</fullName>
                </value>
                <value>
                    <fullName>REFERENCE</fullName>
                </value>
                <value>
                    <fullName>STRING</fullName>
                </value>
                <value>
                    <fullName>TEXTAREA</fullName>
                </value>
                <value>
                    <fullName>URL</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                    <isActive>false</isActive>
                    <label>Text</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_RHS_Static_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To indicate if RHS is static value</description>
        <inlineHelpText>To indicate if RHS is static value</inlineHelpText>
        <label>Is RHS Static Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <description>Used to store operator to compare field 1 and field 2</description>
        <inlineHelpText>Used to store operator to compare field 1 and field 2</inlineHelpText>
        <label>Operator</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Field_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Rule_Operators</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>monitor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Monitor</label>
        <type>Checkbox</type>
    </fields>
    <label>Program Rule</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Program Rules Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>